2004-08-23	blytkerchan
	* thread_list.c (_lt_thread_list_find): rename from
	lt_thread_list_find
	(lt_thread_list_remove): use lt_thread_list_state_t in stead of
	list_state_t
	call _lt_thread_list_find in stead of list_find
	(lt_thread_list_for_each): implement
	(lt_thread_list_insert): ditto
	(lt_thread_list_find): ditto

2004-08-22	blytkerchan
	* thread.c (lt_thread_new): set mark field to 0
	* thread.h [lt_thread_t]: new field: mark
	* thread_list.c [DUMMY_MAGIC]: new macro
	[lt_thread_list_state_t]: new typedef
	(lt_thread_list_find): new function
	(lt_thread_list_new): initialize retval members
	(lt_thread_list_free): free head member
	(lt_thread_list_remove): implement
	(lt_thread_list_empty): ditto
	(lt_thread_list_move): ditto
	* thread_list.h [lt_thread_list_t]: new field: head

2004-08-20	blytkerchan
	* how_thread_queues_work.txt: update
	* thread_queue.c: include arch/include/increment.h
	[DUMMY_MAGIC]: define
	(lt_thread_queue_new): allocate a dummy node
	(lt_thread_queue_free): rename from lt_thread_free
	free the dummy node
	(lt_thread_queue_empty): add a describing comment
	implement
	(lt_thread_queue_first): ditto - both
	(lt_thread_queue_deq): ditto - latter
	(lt_thread_queue_enq): ditto
	* thread_queue.h [lt_thread_queue_t]: remove field dummy

2004-08-19	blytkerchan
	* how_thread_queues_work.txt: new file
	* thread_queue.c (lt_thread_queue_deq): remove dead code
	(lt_thread_queue_enq): ditto
	* thread_queue.h [lt_thread_queue_t]: new dummy field
	make tail field an lt_thread_t again

2004-08-18	blytkerchan
	* thread_list.c: new file
	* thread_queue.c: ditto
	* module.mk [libthread_SRC]: add thread_list.c and thread_queue.c
	* thread_queue.h [lt_thread_queue_t]: new fields head and tail
	(lt_thread_queue_empty): change type of queue parameter to
	lt_thread_queue_t
	(lt_thread_queue_first): ditto
	(lt_thread_queue_deq): ditto
	(lt_thread_queue_enq): ditto

2004-08-17	blytkerchan	continue translation to C
	* thread_queue.h: new file